# caliban-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: labels.yml
.github/workflows/: ci.yml  release-image.yml
deploy/crd/: calibantask.yaml  workspace.yaml
deploy/samples/: calibantask.yaml  workspace.yaml
docs/: container.md
docs/adr/: 0000-architecture-decision-records.md  0001-kube-rs-stack-and-calibantask-crd.md  0002-reconcile-calibantask-to-sandbox.md  0003-caliband-launch-contract.md  0004-workspace-crd-and-resolve-and-pin.md  README.md
docs/plans/: 2026-07-04-p2-crd-scaffold.md  2026-07-04-p2-reconcile-sandbox.md  2026-07-05-caliband-launch-contract.md
docs/superpowers/plans/: 2026-07-11-workspace-crd-and-resolve-and-pin.md
src/: config.rs  controller.rs  crd.rs  lib.rs  resources.rs  sandbox.rs  workspace.rs  workspace_controller.rs
