[package]
name = "caliban-operator"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Kubernetes operator (kube-rs) reconciling caliban Workspace + CalibanTask CRs into sandboxed caliband workloads"
repository = "https://github.com/caliban-ai/caliban-operator"
publish = false

[[bin]]
name = "caliban-operator"
path = "src/bin/caliban-operator.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[dependencies]
anyhow = "1.0.103"
futures = "0.3.32"
k8s-openapi = { version = "0.28.0", default-features = false, features = ["v1_32", "schemars"] }
kube = { version = "4.0.0", features = ["runtime", "derive", "client"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# serde_norway is the maintained fork of the unmaintained serde_yaml (RUSTSEC),
# with the same API and byte-identical emitter (keeps crdgen ↔ sync-test stable).
serde_norway = "0.9.42"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
